Section-2-DevOps/Session-7_Kubernetes/7.8_microservices/01-database.yaml
# Simple Database for Todo App
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: postgres
        image: postgres:13
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: todo-app
spec:
  selector:
    app: database
  ports:
  - port: 5432
    targetPort: 5432
